--- a/docker/www/index.html
+++ b/docker/www/index.html
@@ -113,11 +113,10 @@
     }
 
     document.addEventListener('DOMContentLoaded', (event) => {
-
       document.getElementById("main").addEventListener('dblclick', function (e) {
-        document.getElementById("txtName").value = "Grandma";
+        document.getElementById("txtName").value = "John Doe";
         document.getElementById("txtPhone").value = "0481900000";
-        document.getElementById("txtEmail").value = "grandma@grafana.com";
+        document.getElementById("txtEmail").value = "john.doe@grafana.com";
         document.getElementById("txtMessage").value = "Hello, I need some help.\n My credit card is no longer working.\n My credit card number is 4263-9826-4026-9299.\n Please call me back.";
       });
 
